--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <hr>
     <footer class="flex-column">
-        <p>Built by Kalvium 💗</p>
+        <p>Built by *PRABHAS VARMA*</p>
     </footer>
 </body>
 
